--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -19,7 +19,7 @@ jobs:
         run: docker build . --file Dockerfile --tag sprobot-local-test
       
       - name: run tests against it
-        run: docker run --file Dockerfile sprobot-local-test pytest
+        run: docker run sprobot-local-test pytest
 
       - name: login to docker hub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
