--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -13,13 +13,13 @@ jobs:
         id: buildx
         uses: crazy-max/ghaction-docker-buildx@v1
         with:
-          version: latest
+          buildx-version: latest
 
       - name: build an image first
         run: docker build . --file Dockerfile --tag sprobot-local-test
       
       - name: run tests against it
-        run: docker run sprobot-local-test pytest
+        run: docker run sprobot-local-test tree
 
       - name: login to docker hub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
