--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -3,28 +3,42 @@ name: sprobot build & test
 on: [push]
 
 jobs:
+  test:
+    steps:
+      - name: checkout code
+        uses: actions/checkout@v2
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: build an image
+        run: docker buildx build . --load --tag sprobot-local-test
+      
+      - name: run tests against it
+        run: docker run sprobot-local-test pytest
+
   build:
     runs-on: ubuntu-latest
     steps:
       - name: checkout code
         uses: actions/checkout@v2
 
-      - name: install buildx
-        id: buildx
-        uses: crazy-max/ghaction-docker-buildx@v1
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
         with:
-          buildx-version: latest
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: build an image first
-        run: docker build . --file Dockerfile --tag sprobot-local-test
-      
-      - name: run tests against it
-        run: docker run sprobot-local-test ls -R
-
-      - name: login to docker hub
-        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-
-      - name: build the image
+      - name: build and push the multiarch image
         run: |
           docker buildx build --push \
             --tag sadbox/sprobot:latest \
