--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,6 +1,11 @@
 version: 2
 updates:
   - package-ecosystem: "pip" 
-    directory: "/" # Location of package manifests
+    directory: "/"
+    schedule:
+      interval: "weekly"
+      
+  - package-ecosystem: "docker" 
+    directory: "/"
     schedule:
       interval: "weekly"
