--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -1,6 +1,10 @@
 name: sprobot build & test
 
-on: [push]
+on:
+  push:
+    branches:
+      - main
+      - 'releases/**'
 
 jobs:
   test:
@@ -38,28 +42,3 @@ jobs:
 
       - name: run linters against it
         run: docker run sprobot-local-test testing/run-linters.sh
-
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - name: checkout code
-        uses: actions/checkout@v2
-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-      - name: Login to Docker Hub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: build and push the multiarch image
-        run: |
-          docker buildx build --push \
-            --tag sadbox/sprobot:latest \
-            --platform linux/amd64,linux/arm64 .
-
