--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,8 @@ boto3==1.24.61
 pytest==7.1.2
 flake8==5.0.4
 flake8-black==0.3.3
-mypy==0.971
 requests==2.28.1
 types-requests==2.28.9
 filetype==1.1.0
+fuzzywuzzy[speedup]==0.18.0
+pytype==2022.8.23
