Also update the github workflows to match the new docker setup

--- a/.github/workflows/build-and-push.yaml
+++ b/.github/workflows/build-and-push.yaml
@@ -29,5 +29,6 @@ jobs:
         run: |
           docker buildx build --push \
             --tag sadbox/sprobot:latest \
+            --target prod \
             --platform linux/amd64,linux/arm64 .
 
