--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 discord.py==2.0.1
 boto3==1.24.61
-requests==2.28.1
+httpx==0.23.0
 types-requests==2.28.9
 filetype==1.1.0
 fuzzywuzzy[speedup]==0.18.0
