--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,8 @@ discord.py==2.0.1
 aioboto3==10.0.0
 httpx==0.23.0
 types-requests==2.28.9
+structlog==22.1.0
 filetype==1.1.0
-fuzzywuzzy[speedup]==0.18.0
+thefuzz[speedup]==0.19.0
 cachetools==5.2.0
 types-cachetools==5.2.0
