--- a/.github/workflows/build-test-push.yaml
+++ b/.github/workflows/build-test-push.yaml
@@ -7,6 +7,9 @@ on:
 jobs:
   lint:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        platform: [linux/amd64, linux/arm64]
     steps:
       - name: checkout code
         uses: actions/checkout@v3
@@ -25,7 +28,7 @@ jobs:
           load: true
           tags: sprobot-local-lint
           target: lint
-          platforms: linux/amd64
+          platforms: ${{ matrix.platform }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
@@ -34,6 +37,9 @@ jobs:
         
   test:
     needs: [lint]
+    strategy:
+      matrix:
+        platform: [linux/amd64, linux/arm64]
     runs-on: ubuntu-latest
     steps:
       - name: checkout code
@@ -52,8 +58,8 @@ jobs:
           push: false
           load: true
           tags: sprobot-local-test
-          target: lint
-          platforms: linux/amd64
+          target: test
+          platforms: ${{ matrix.platform }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
