Make lint non-parallel so that amd64 might warm the mypy cache for arm64

--- a/.github/workflows/build-test-push.yaml
+++ b/.github/workflows/build-test-push.yaml
@@ -10,6 +10,9 @@ jobs:
     strategy:
       matrix:
         platform: [linux/amd64, linux/arm64]
+      fail-fast: true
+      max-parallel: 1 # mypy is extremely slow, but we cache, let amd64 run first
+
     steps:
       - name: checkout code
         uses: actions/checkout@v3
