--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,14 +3,14 @@ updates:
   - package-ecosystem: "pip" 
     directory: "/"
     schedule:
-      interval: "weekly"
+      interval: "daily"
       
   - package-ecosystem: "docker" 
     directory: "/"
     schedule:
-      interval: "weekly"
+      interval: "daily"
       
   - package-ecosystem: "github-actions" 
     directory: "/"
     schedule:
-      interval: "weekly"
+      interval: "daily"
