--- a/.github/workflows/build-test-push.yaml
+++ b/.github/workflows/build-test-push.yaml
@@ -5,6 +5,8 @@ on:
     branches-ignore: # Dependabot branches get ran through pull_request
       - 'dependabot/**'
   pull_request:
+  schedule:
+    - cron: '0 5 * * 1,3,5'
 
 jobs:
   lint:
