unwind that change

--- a/.github/workflows/build-test-push.yaml
+++ b/.github/workflows/build-test-push.yaml
@@ -119,5 +119,4 @@ jobs:
           tags: sadbox/sprobot:latest
           target: prod
           platforms: linux/amd64,linux/arm64
-          cache-from: type=gha,scope=linux/amd64
-          cache-from: type=gha,scope=linux/arm64
+          cache-from: type=gha,scope=linux/arm64 # Ideally we'd like to pull cache from both, but arm is the slower to build, so we settle for that
