--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,12 +3,12 @@ updates:
   - package-ecosystem: "pip" 
     directory: "/"
     schedule:
-      interval: "daily"
+      interval: "monthly"
       
   - package-ecosystem: "docker" 
     directory: "/"
     schedule:
-      interval: "daily"
+      interval: "monthly"
     ignore:
       - dependency-name: "python"
         update-types: ["version-update:semver-major", "version-update:semver-minor"]
@@ -16,4 +16,4 @@ updates:
   - package-ecosystem: "github-actions" 
     directory: "/"
     schedule:
-      interval: "daily"
+      interval: "monthly"
