--- a/.github/workflows/build-test-push.yaml
+++ b/.github/workflows/build-test-push.yaml
@@ -15,7 +15,6 @@ jobs:
       matrix:
         platform: [linux/amd64, linux/arm64]
       fail-fast: true
-      max-parallel: 1 # mypy is extremely slow, but we cache, let amd64 run first
 
     steps:
       - name: checkout code
@@ -39,25 +38,8 @@ jobs:
           cache-from: type=gha,scope=${{ matrix.platform }}
           cache-to: type=gha,mode=max,scope=${{ matrix.platform }}
 
-      - name: Cache mypy
-        id: cache-primes
-        uses: actions/cache@v3
-        with:
-          path: |
-            /tmp/sprobot-mypy-cache
-            /tmp/sprobot-web-mypy-cache
-          key: mypy-cache-${{ runner.os }}-${{ github.run_id }} # This is a hack to update the cache every run
-          restore-keys: |
-            mypy-cache-${{ runner.os }}
-
-      # Just in case we didn't get anything from the cache
-      - name: Create folder
-        run: |
-          mkdir -p /tmp/sprobot-mypy-cache || true
-          mkdir -p /tmp/sprobot-web-mypy-cache || true
-
       - name: run linters against it
-        run: docker run --platform ${{ matrix.platform }} --mount type=bind,source=/tmp/sprobot-mypy-cache,target=/code/sprobot/.mypy_cache --mount type=bind,source=/tmp/sprobot-web-mypy-cache,target=/code/sprobot-web/.mypy_cache sprobot-local-lint
+        run: docker run --platform ${{ matrix.platform }} sprobot-local-lint
         
   test:
     needs: [lint]
