--- a/.github/workflows/build-test-push.yaml
+++ b/.github/workflows/build-test-push.yaml
@@ -10,11 +10,16 @@ on:
 
 jobs:
   lint:
-    runs-on: ubuntu-latest
     strategy:
       matrix:
-        platform: [linux/amd64, linux/arm64]
+        include:
+          - platform: "linux/amd64"
+            runs-on: "ubuntu-latest"
+          - platform: "linux/arm64"
+            runs-on: "macos-latest"
       fail-fast: true
+
+    runs-on: ${{ matrix.runs-on }}
 
     steps:
       - name: checkout code
@@ -45,8 +50,14 @@ jobs:
     needs: [lint]
     strategy:
       matrix:
-        platform: [linux/amd64, linux/arm64]
-    runs-on: ubuntu-latest
+        include:
+          - platform: "linux/amd64"
+            runs-on: "ubuntu-latest"
+          - platform: "linux/arm64"
+            runs-on: "macos-latest"
+      fail-fast: true
+
+    runs-on: ${{ matrix.runs-on }}
     steps:
       - name: checkout code
         uses: actions/checkout@v4
