--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 discord.py==2.4.0
 aioboto3==13.1.1
 httpx==0.27.2
+requests==2.32.3
 types-requests==2.32.0.20240914
 structlog==24.4.0
 filetype==1.2.0
